# AndroidCPPTest

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/androidcpptest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: planning_main.h
app/src/main/cpp/include/pnc_map/: pnc_map.h
app/src/main/cpp/include/process/: process.h
app/src/main/java/com/example/androidcpptest/: MainActivity.java  SSDPHelper.java  SpActivity.java  VideoPlayerActivity.java  WebViewActivity.java
app/src/main/java/com/example/androidcpptest/utils/web/: VideoResourceListener.java  WebViewHelper.java
app/src/main/res/drawable/: launch_background.xml  title_en.xml
app/src/main/res/layout/: activity_main.xml  activity_sp.xml  activity_video_player.xml  activity_web_view.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/androidcpptest/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
